A copy editor was here.

--- a/back.tex
+++ b/back.tex
@@ -60,10 +60,10 @@ Captions are set in
 a Helvetica restoration by Christian Schwartz.
 Other digitizations of the classic Swiss typeface are based on fonts made for
 Linotype and phototypesetting machines,
-resulting in digital versions with all the compromises and kludges of those
+resulting in digital versions with all the compromises and kludges from those
 past two generations of printing technology.
 Schwartz based his work on Helvetica's original drawings,
-resulting in a design faithful to the original cold metal type.
+producing a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
 makes a guest appearance
@@ -80,7 +80,8 @@ a type family by Google that covers \emph{every} language
 in the Unicode standard.
 
 Finally,
-Latin Modern---the OpenType version of Knuth's Computer Modern---as well
+Latin Modern---the OpenType version of Knuth's Computer Modern used throughout
+the book---as well
 as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
 free alternative to Times Roman seen on page \pageref{typography}---are from
 the digital type foundry of Grupa Użytkowników Systemu \TeX{},
