--- a/math.tex
+++ b/math.tex
@@ -1,6 +1,6 @@
 \chapter{Mathematics}
 
-\LaTeX is excellent at typesetting mathematics, both inline with body text,
+\LaTeX{} is excellent at typesetting mathematics, both inline with body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
 The former can be created with \verb|$...$| or \verb|\(...\)|,
