--- a/structure.tex
+++ b/structure.tex
@@ -112,7 +112,7 @@ Goodbye!
 \end{document}
 \end{lstlisting}
 \end{leftfigure}
-Note that some levels may not be available depending on the document class
+Some levels may not be available depending on the document class
 you've chosen. Parts and chapters, for example, only appear in books.
 And don't go too crazy with these commands.
 Most works only need a few levels of hierarchy.
@@ -140,6 +140,6 @@ and ``starred'' section commands, e.g., \verb|\subsection*{foo}|.
 \item Use KOMA~Script, a set of document classes and packages
 that make it easy to customize nearly every aspect of your document,
 from section heading fonts to footnotes.
-\item Include images using the \texttt{graphicsx} package.
+\item Include images using the \texttt{graphicx} package.
 \item Add hyperlinks to your \acronym{pdf} using the \texttt{hyperref} package.
 \end{itemize}
