--- a/why.tex
+++ b/why.tex
@@ -27,7 +27,7 @@ If the program formats something in a way you didn't intend,
 how difficult is it to change?%\footnote{I spent far too much of my childhood
 %fighting with Word about how it wrapped text around images.}
 
-\LaTeX\footnote{Pronounced ``lay-tech'' or ``lah-tex''} is different.
+\LaTeX\footnote{Pronounced ``lay-tech'' or ``lah-tech''} is different.
 Here, you write your document as a ``plain'' text file,
 using \introduce{markup} to specify how things should look.
 When you are ready, \LaTeX{} generates your document from this file
@@ -39,7 +39,7 @@ document to \LaTeX{}.
 
 \begin{leftfigure}
 \begin{lstlisting}
-\LaTeX\footnote{Pronounced ``lay-tech'' or ``lah-tex''} is different.
+\LaTeX\footnote{Pronounced ``lay-tech'' or ``lah-tech''} is different.
 Here, you write your document as a ``plain'' text file,
 using \introduce{markup} to specify how things should look.
 When you are ready, \LaTeX{} generates your document from this file
@@ -93,7 +93,7 @@ You should try it because you care about\ldots
 
 Modern life is a constant battle for your time---every day,
 dozens of ads, apps, emails, sites, and texts fight
-for a few short minutes.
+for a few short minutes of it.
 To put ideas into the world,
 nothing is more important than catching and holding
 the attention of your audience.
@@ -142,7 +142,7 @@ giving you the same tools available to professional designers and publishers.
 
 \chapter{Another Guide?}
 
-One might wonder why the world needs another needs another \LaTeX{} guide.
+One might wonder why the world needs another \LaTeX{} guide.
 After all, it's been out for more than 30 years.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of great resources online.
@@ -152,9 +152,9 @@ and they are old.
 The first is anathema to newcomers---if somebody asks about \LaTeX{},
 throwing a 200+ page book at them isn't an encouraging start.
 The second matters because of how much the world of computer typesetting has
-changed.
+changed since 1986.
 
-When \LaTeX{} was first released in 1986, none of the publishing technologies
+When \LaTeX{} was first released that year, none of the publishing technologies
 we use today existed.
 Adobe wouldn't introduce their Portable Document Format for another seven years,
 and home computers wouldn't support it ubiquitously for several more.
