--- a/latex-book.tex
+++ b/latex-book.tex
@@ -146,7 +146,7 @@
 \setkomafont{disposition}{\rmfamily}
 \addtokomafont{chapter}{\addfontfeature{Numbers=Uppercase}}
 \setkomafont{section}{\Large\itshape}
-\renewcommand*\thesection{\upshape\arabic{section}}
+\setkomafont{subsection}{\large\itshape}
 
 \setcapwidth[c]{.8\textwidth}
 %\setcapmargin{0pt}
