--- a/punctuation.tex
+++ b/punctuation.tex
@@ -1,3 +1,4 @@
 \chapter{Punctuation}
+\label{punctuation}
 
-Quotes, hyphens, dashes, ligatures, ellipses, oh my!
+Quotes, hyphens, dashes, ellipses, oh my!
