Disable Th ligature
selnolig to the rescue!

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -92,6 +92,7 @@
 % Disable ligatures across grapheme boundaries
 % (see the package manual for details.)
 \usepackage[american]{selnolig}
+\nolig{Th}{T|h}
 
 % Use symbols for footnotes, resetting each page
 \usepackage[perpage,bottom,symbol*]{footmisc}
