--- a/back.tex
+++ b/back.tex
@@ -46,9 +46,11 @@ Available at \url{https://practicaltypography.com}
 This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
 Robert Slimbach,
 His revival is based on the Roman type of
-the 16{\addfontfeature{VerticalPosition=Superior}th} century French
+the \otford{16}{th} century French
 punchcutter Claude Garamond.
 Italics are based on the work of his contemporary Robert Granjon.
+A few glyphs---such as the historical long s---were borrowed from
+Georg Duffner's EB~Garamond.
 
 Monospaced items are set in Matthias Tellen's
 \href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}},
@@ -66,8 +68,7 @@ Schwartz based his work on Helvetica's original drawings,
 producing a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
-makes a guest appearance
-for examples on page \pageref{typography}.
+makes a few guest appearances.
 Originally released in 1927 by Paul Renner,
 Futura has found itself almost everywhere,
 from advertising and political campaigns to the moon.
