--- a/history.tex
+++ b/history.tex
@@ -21,7 +21,7 @@ so publishers had replaced it with phototypesetting,
 which works by projecting images of characters onto film.
 The new technology, while much cheaper and faster,
 didn't provide the same level of quality Knuth had come to
-expect.\punckern\endnote{Donald E.~Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5.}
+expect.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5.}
 
 The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in print quality,
@@ -46,7 +46,7 @@ When the dust settled in 1978, Knuth had the first version of
 ``\textbf{tech}nician''\quotekern. It is short for the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
 meaning \introduce{art} or \introduce{craft}.\endnote{Knuth,
-\textit{The \TeX book} (Addison-Wesley, 1986), 1.}}
+\textit{The \TeX book}, 1.}}
 
 It's hard to appreciate how much of a revolution \TeX\ was,
 especially looking back from a time where anybody with a copy
