--- a/structure.tex
+++ b/structure.tex
@@ -78,8 +78,8 @@ is built on top of---the latter is a framework of commands for the former.
 (For example, \texttt{\textbackslash documentclass} and friends are provided by
 \LaTeX{}, but the \TeX{} engine is what's actually laying out your document.)
 The long version is at the back of the book, under Appendix~\ref{history}.
-We won't discuss how to use plain \TeX{} here---that's for another book.
-The \TeX book.}
+We won't discuss how to use plain \TeX{} here. That's for another book---the
+\TeX book.}
 at \url{https://ctan.org}.
 The manuals for every single package can also be found there,
 so it should be your first stop when learning how to use a new package.
